import { testParseOpenAPI } from "./testParseOpenApi";

describe("x-fern-overrides-filepath", () => {
    testParseOpenAPI("x-fern-overrides-filepath", "openapi.yml");
});
