// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`x-fern-overrides-filepath > x-fern-overrides-filepath > parse open api 1`] = `
{
  "channel": [],
  "description": null,
  "endpoints": [
    {
      "audiences": [],
      "authed": false,
      "availability": null,
      "description": "Retrieve a list of users from the system.",
      "errorStatusCode": [
        500,
      ],
      "examples": [
        {
          "codeSamples": [],
          "description": null,
          "headers": [],
          "name": null,
          "pathParameters": [],
          "queryParameters": [],
          "request": null,
          "response": null,
        },
      ],
      "generatedRequestName": "UsersGetRequest",
      "headers": [],
      "internal": null,
      "method": "GET",
      "operationId": null,
      "path": "/users",
      "pathParameters": [],
      "queryParameters": [],
      "request": null,
      "requestNameOverride": null,
      "response": null,
      "sdkName": {
        "groupName": [
          "users",
        ],
        "methodName": "get",
      },
      "server": [],
      "summary": "List users (Overriden description)",
      "tags": [],
    },
  ],
  "errors": {
    "500": {
      "description": null,
      "generatedName": "InternalServerError",
      "nameOverride": null,
      "schema": {
        "generatedName": "InternalServerErrorBody",
        "nameOverride": null,
        "type": "unknown",
      },
    },
  },
  "globalHeaders": [],
  "hasEndpointsMarkedInternal": false,
  "nonRequestReferencedSchemas": [],
  "schemas": {
    "User": {
      "allOf": [],
      "allOfPropertyConflicts": [],
      "description": null,
      "generatedName": "User",
      "groupName": null,
      "nameOverride": null,
      "properties": [
        {
          "audiences": [],
          "conflict": {},
          "generatedName": "userId",
          "key": "id",
          "schema": {
            "description": null,
            "generatedName": "UserId",
            "groupName": null,
            "nameOverride": null,
            "schema": {
              "maxLength": null,
              "minLength": null,
              "type": "string",
            },
            "type": "primitive",
          },
        },
        {
          "audiences": [],
          "conflict": {},
          "generatedName": "userName",
          "key": "name",
          "schema": {
            "description": null,
            "generatedName": "userName",
            "groupName": null,
            "nameOverride": null,
            "type": "optional",
            "value": {
              "description": null,
              "generatedName": "UserName",
              "groupName": null,
              "nameOverride": null,
              "schema": {
                "maxLength": null,
                "minLength": null,
                "type": "string",
              },
              "type": "primitive",
            },
          },
        },
        {
          "audiences": [],
          "conflict": {},
          "generatedName": "userEmail",
          "key": "email",
          "schema": {
            "description": null,
            "generatedName": "userEmail",
            "groupName": null,
            "nameOverride": null,
            "type": "optional",
            "value": {
              "description": null,
              "generatedName": "UserEmail",
              "groupName": null,
              "nameOverride": null,
              "schema": {
                "maxLength": null,
                "minLength": null,
                "type": "string",
              },
              "type": "primitive",
            },
          },
        },
        {
          "audiences": [],
          "conflict": {},
          "generatedName": "userRole",
          "key": "role",
          "schema": {
            "description": null,
            "generatedName": "userRole",
            "groupName": null,
            "nameOverride": null,
            "type": "optional",
            "value": {
              "description": null,
              "generatedName": "UserRole",
              "groupName": null,
              "nameOverride": null,
              "type": "enum",
              "values": [
                {
                  "casing": {
                    "camel": null,
                    "pascal": null,
                    "screamingSnake": null,
                    "snake": null,
                  },
                  "description": null,
                  "generatedName": "admin",
                  "nameOverride": null,
                  "value": "admin",
                },
                {
                  "casing": {
                    "camel": null,
                    "pascal": null,
                    "screamingSnake": null,
                    "snake": null,
                  },
                  "description": null,
                  "generatedName": "user",
                  "nameOverride": null,
                  "value": "user",
                },
              ],
            },
          },
        },
      ],
      "type": "object",
    },
  },
  "securitySchemes": {},
  "servers": [],
  "tags": {
    "orderedTagIds": null,
    "tagsById": {},
  },
  "title": "User API",
  "variables": {},
  "webhooks": [],
}
`;

exports[`x-fern-overrides-filepath x-fern-overrides-filepath parse open api 1`] = `
{
  "channel": [],
  "description": null,
  "endpoints": [
    {
      "audiences": [],
      "authed": false,
      "availability": null,
      "description": "Retrieve a list of users from the system.",
      "errorStatusCode": [
        500,
      ],
      "examples": [
        {
          "codeSamples": [],
          "description": null,
          "headers": [],
          "name": null,
          "pathParameters": [],
          "queryParameters": [],
          "request": null,
          "response": null,
        },
      ],
      "generatedRequestName": "UsersGetRequest",
      "headers": [],
      "internal": null,
      "method": "GET",
      "operationId": null,
      "path": "/users",
      "pathParameters": [],
      "queryParameters": [],
      "request": null,
      "requestNameOverride": null,
      "response": null,
      "sdkName": {
        "groupName": [
          "users",
        ],
        "methodName": "get",
      },
      "server": [],
      "summary": "List users (Overriden description)",
      "tags": [],
    },
  ],
  "errors": {
    "500": {
      "description": null,
      "generatedName": "InternalServerError",
      "nameOverride": null,
      "schema": {
        "generatedName": "InternalServerErrorBody",
        "nameOverride": null,
        "type": "unknown",
      },
    },
  },
  "globalHeaders": null,
  "hasEndpointsMarkedInternal": false,
  "nonRequestReferencedSchemas": [],
  "schemas": {
    "User": {
      "allOf": [],
      "allOfPropertyConflicts": [],
      "description": null,
      "generatedName": "User",
      "groupName": null,
      "nameOverride": null,
      "properties": [
        {
          "audiences": [],
          "conflict": {},
          "generatedName": "userId",
          "key": "id",
          "schema": {
            "description": null,
            "generatedName": "UserId",
            "groupName": null,
            "nameOverride": null,
            "schema": {
              "maxLength": null,
              "minLength": null,
              "type": "string",
            },
            "type": "primitive",
          },
        },
        {
          "audiences": [],
          "conflict": {},
          "generatedName": "userName",
          "key": "name",
          "schema": {
            "description": null,
            "generatedName": "userName",
            "groupName": null,
            "nameOverride": null,
            "type": "optional",
            "value": {
              "description": null,
              "generatedName": "UserName",
              "groupName": null,
              "nameOverride": null,
              "schema": {
                "maxLength": null,
                "minLength": null,
                "type": "string",
              },
              "type": "primitive",
            },
          },
        },
        {
          "audiences": [],
          "conflict": {},
          "generatedName": "userEmail",
          "key": "email",
          "schema": {
            "description": null,
            "generatedName": "userEmail",
            "groupName": null,
            "nameOverride": null,
            "type": "optional",
            "value": {
              "description": null,
              "generatedName": "UserEmail",
              "groupName": null,
              "nameOverride": null,
              "schema": {
                "maxLength": null,
                "minLength": null,
                "type": "string",
              },
              "type": "primitive",
            },
          },
        },
        {
          "audiences": [],
          "conflict": {},
          "generatedName": "userRole",
          "key": "role",
          "schema": {
            "description": null,
            "generatedName": "userRole",
            "groupName": null,
            "nameOverride": null,
            "type": "optional",
            "value": {
              "description": null,
              "generatedName": "UserRole",
              "groupName": null,
              "nameOverride": null,
              "type": "enum",
              "values": [
                {
                  "casing": {
                    "camel": null,
                    "pascal": null,
                    "screamingSnake": null,
                    "snake": null,
                  },
                  "description": null,
                  "generatedName": "admin",
                  "nameOverride": null,
                  "value": "admin",
                },
                {
                  "casing": {
                    "camel": null,
                    "pascal": null,
                    "screamingSnake": null,
                    "snake": null,
                  },
                  "description": null,
                  "generatedName": "user",
                  "nameOverride": null,
                  "value": "user",
                },
              ],
            },
          },
        },
      ],
      "type": "object",
    },
  },
  "securitySchemes": {},
  "servers": [],
  "tags": {
    "orderedTagIds": null,
    "tagsById": {},
  },
  "title": "User API",
  "variables": {},
  "webhooks": [],
}
`;
